resources/acs-lab/docker-httpd-deployment/httpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: httpd
  name: httpd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: httpd
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/app1-dev/httpd:latest
        name: httpd
        ports:
        - containerPort: 8000
        resources: {}
status: {}
