resources/acs-lab/docker-httpd-deployment/httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: httpd
  name: httpd
spec:
  ports:
  - name: 8000-8000
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: httpd
  type: ClusterIP
status:
  loadBalancer: {}
